--- a/Contar caracteres en una cadena/Contar caracteres en una cadena.cbp
+++ b/Contar caracteres en una cadena/Contar caracteres en una cadena.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Imprimir Cadena Punteros" />
+		<Option title="Contar caracteres en una cadena" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Contar caracteres" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Contar caracteres en una cadena" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Contar caracteres" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Contar caracteres en una cadena" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
